# Strata

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  next.config.mjs  package-lock.json  package.json  pyproject.toml  render.yaml  tailwind.config.ts
.github/workflows/: ci.yml  desktop.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/admin/: page.tsx
app/agents/: page.tsx
app/alerts/: page.tsx
app/api/admin/orgs/: route.ts
app/api/admin/users/: route.ts
app/api/auth/login/: route.ts
app/api/auth/logout/: route.ts
app/api/systems/: route.ts
app/catalog/: page.tsx
app/download/: page.tsx
app/governance/: page.tsx
app/incidents/: page.tsx
app/incidents/[id]/: page.tsx
app/login/: page.tsx
app/overview/: page.tsx
app/registry/: page.tsx
app/registry/[id]/: page.tsx
app/roi/: page.tsx
app/settings/: page.tsx
app/simulation/: page.tsx
app/validation/: page.tsx
clients/js/: strata.js
clients/python/: strata_client.py
components/admin/: AdminDashboard.tsx
components/agents/: ActionTimeline.tsx  AgentFleet.tsx  AgentMonitor.tsx
components/alerts/: AlertCard.tsx  AlertCenter.tsx
components/audit/: AuditLog.tsx
components/catalog/: CatalogView.tsx
components/charts/: Bars.tsx  Donut.tsx  LineChart.tsx  Sparkline.tsx
components/governance/: GovernanceBoard.tsx
components/incidents/: IncidentListItem.tsx  IncidentWorkspace.tsx
components/marketing/: DemoForm.tsx  HeroPreview.tsx  LandingNav.tsx
components/overview/: EstateHealth.tsx  LiveAlerts.tsx  RecentActivity.tsx
components/registry/: RegisterSystemModal.tsx  RegistryTable.tsx  SystemMap.tsx
components/roi/: RoiDashboard.tsx
components/settings/: SettingsView.tsx
components/shell/: AppShell.tsx  Brand.tsx  Chrome.tsx  CommandMenu.tsx  Sidebar.tsx  ThemeToggle.tsx  TopBar.tsx  nav.tsx
components/simulation/: SimulationConsole.tsx
components/system/: BehaviorTab.tsx  ControlCenter.tsx  DocumentsTab.tsx  DriftTab.tsx  FairnessTab.tsx  HealthTab.tsx  HistoryTabs.tsx  LineageTab.tsx  PerformanceTab.tsx  SystemDetailClient.tsx  VersionsTab.tsx
components/ui/: Badge.tsx  Button.tsx  Feedback.tsx  Metric.tsx  Modal.tsx  PageHeader.tsx  Panel.tsx  Tabs.tsx
components/validation/: ValidationCenter.tsx  ValidationReport.tsx
desktop/: README.md  main.js  package.json  preload.js
docs/: API.md  ARCHITECTURE.md  EVIDENCE.md  ROADMAP.md  WORKSTREAMS.md  api.md  console.md  desktop.md  integration.md  pitch.md  self-hosting.md  strategy.md  vision.md
examples/: usage.py
lib/: auth.tsx  constants.ts  format.ts  rng.ts  simulation.tsx  store.tsx  systemInput.ts  types.ts  validationEngine.ts
lib/data/: agents.ts  alerts.ts  audit.ts  build.ts  governance.ts  incidents.ts  index.ts  org.ts  scenarios.ts  systems.ts  validation.ts
lib/server/: api.ts  auth.ts  db.ts  session.ts
packaging/: build.py  strata_desktop.spec  strata_desktop_launch.py
prisma/: schema.prisma  seed.mjs
prisma/migrations/20260724061552_init/: migration.sql
strata/: __init__.py  anatomy.py  api.py  assess.py  assessment.py  cache.py  claims.py  cli.py  cohort.py  consensus.py  console_page.py  contradiction.py  dashboard_page.py  db.py  demo.py  desktop.py  distributions.py  docs_page.py  entities.py  equator.py  evaluation.py  evidence.py  extract.py  graph.py  graph_page.py  keys.py  llm.py  metaanalysis.py  models.py  monitor.py  net.py  notify.py  pages.py  pages_site.py  pages_web.py  pico.py  pipeline.py  pubmed.py  query.py  ranking.py  (+14 more)
strata/appraise/: __init__.py  amstar2.py  rob2.py  robins_i.py  signals.py
strata/meta/: __init__.py  bias.py  core.py  dist.py  influence.py  subgroup.py  tsa.py
strata/nn/: __init__.py  build.py  corpus.py  linalg.py  losses.py  model.py  modules.py  optim.py  probes.py  store.py  text.py  train.py
strata/nn/weights/: design.json  rigour.json
strata/reporting/: __init__.py  prisma.py  sof.py
strata/sources/: __init__.py  _http.py  europepmc.py  linkage.py  openalex.py  openfda.py  registry.py  trials.py
tests/: run.py  test_api.py  test_assessment.py  test_desktop.py  test_distributions.py  test_entities.py  test_equator.py  test_eval.py  test_graph.py  test_metaanalysis.py  test_monitoring.py  test_nn.py  test_pages.py  test_pipeline.py  test_review.py  test_sources.py  test_stats.py  test_strata.py  test_verify.py
(+4 files in other folders)
