[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strata-evidence"
version = "0.2.0"
description = "Continuous Evidence Intelligence: verify whether medical claims are supported by the literature, and monitor when that evidence changes."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Neil Gilani" }]
keywords = ["medicine", "evidence-based-medicine", "pubmed", "europepmc", "openalex",
            "clinical", "GRADE", "evidence-monitoring", "claim-verification", "rag",
            "citations", "healthcare", "medical-affairs", "pharmacovigilance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []   # standard library only

[project.scripts]
strata = "strata.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["strata"]
