[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strata-evidence"
version = "0.6.0"
description = "Continuous evidence intelligence for medical AI and healthcare. Treat every medical claim as a first-class, versioned object: trace it across PubMed, Europe PMC, ClinicalTrials.gov, OpenAlex and Crossref, grade the evidence with an inspectable GRADE rationale, explain contradictions, and monitor it continuously — versioning the claim and raising alerts when the evidence materially changes. Ships an enterprise Console (Evidence Health), a claim/changes/evidence API with signed webhooks, real hashed API keys, SDKs, optional AI, and a self-host platform with local cohort import."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Neil Gilani" }]
keywords = ["medicine", "evidence-based-medicine", "pubmed", "clinical", "research",
            "rag", "citations", "healthcare", "systematic-review", "living-review",
            "evidence-surveillance", "medical-affairs", "ai-verification",
            "fact-checking", "medical-ai", "hallucination"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []   # standard library only

[project.urls]
Homepage = "https://github.com/hilothefunnydog123-coder/strata"

[project.scripts]
strata = "strata.cli:main"
strata-desktop = "strata.desktop:main"

[tool.hatch.build.targets.wheel]
packages = ["strata"]

[tool.hatch.build.targets.sdist]
include = ["strata", "clients", "docs", "tests", "packaging", "README.md", "LICENSE",
           "Dockerfile", "docker-compose.yml", "Makefile"]
